--- a/enum-convertible-annotations/gradle.properties
+++ b/enum-convertible-annotations/gradle.properties
@@ -3,7 +3,7 @@ POM_ARTIFACT_ID=enum-convertible-annotations
 VERSION_NAME=1.0.1
 
 POM_NAME=Enum Convertible Annotations
-POM_DESCRIPTION=Annotations that are used frpm KSP processor to auto-generate mappers for enums.
+POM_DESCRIPTION=Annotations that are used from KSP processor to auto-generate mappers for enums.
 POM_INCEPTION_YEAR=2022
 POM_URL=https://github.com/bluegroundltd/enum-convertible
 
