--- a/enum-convertible-processor/gradle.properties
+++ b/enum-convertible-processor/gradle.properties
@@ -1,6 +1,6 @@
 GROUP=io.github.bluegroundltd
 POM_ARTIFACT_ID=enum-convertible
-VERSION_NAME=1.0.3
+VERSION_NAME=1.0.4-aplha01
 
 POM_NAME=Enum Convertible
 POM_DESCRIPTION=KSP processor that auto-generates mappers for enums.
